--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);} 
   gtag('js', new Date()); 
 
-  gtag('config', 'UA-110493660-1'); 
+  gtag('config', 'G-L33J41P3HN'); 
 </script> 
 
 <title>Li & Cai Intellectual Property</title>
