--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-L33J41P3HN"></script>
 <script> 
   window.dataLayer = window.dataLayer || []; 
@@ -9,7 +9,7 @@
   gtag('js', new Date()); 
 
   gtag('config', 'G-L33J41P3HN'); 
-</script> 
+</script> -->
 
 <title>Li & Cai Intellectual Property</title>
 
