--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L33J41P3HN"></script>
-<script> 
- window.dataLayer = window.dataLayer || []; 
-function gtag(){dataLayer.push(arguments);} 
-gtag('js', new Date()); 
+// <script async src="https://www.googletagmanager.com/gtag/js?id=G-L33J41P3HN"></script>
+// <script> 
+//  window.dataLayer = window.dataLayer || []; 
+// function gtag(){dataLayer.push(arguments);} 
+// gtag('js', new Date()); 
 
-gtag('config', 'G-L33J41P3HN'); 
- </script> 
+// gtag('config', 'G-L33J41P3HN'); 
+//  </script> 
 
 <title>Li & Cai Intellectual Property</title>
 
