--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
- <script> 
- (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ 
- (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), 
- m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) 
-   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); 
-   ga('create', 'G-L33J41P3HN', 'getbootstrap.com'); 
-   ga('send', 'pageview'); 
- </script> 
+ // <script> 
+ // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ 
+// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), 
+//  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) 
+//    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); 
+//    ga('create', 'G-L33J41P3HN', 'getbootstrap.com'); 
+//    ga('send', 'pageview'); 
+//  </script> 
 
   </head>
   <body>
@@ -163,7 +163,7 @@
 
     <footer class="bd-footer text-muted">
   <div class="container-fluid p-3 p-md-5">
-    <p>LI & CAI INTELLECTUAL PROPERTY 9F, No. 67, DunHua S. Rd., Taipei 106, Taiwan</p> 
+    <p>LI & CAI INTELLECTUAL PROPERTY 9F, No. 69, DunHua S. Rd., Taipei 106, Taiwan</p> 
     <p>Currently v4.0.0-beta. Code licensed <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.</p> 
   </div>
 </footer>
