--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-// <script async src="https://www.googletagmanager.com/gtag/js?id=G-L33J41P3HN"></script>
-// <script> 
-//  window.dataLayer = window.dataLayer || []; 
-// function gtag(){dataLayer.push(arguments);} 
-// gtag('js', new Date()); 
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-L33J41P3HN"></script>  -->
+<!-- <script>  -->
+<!--  window.dataLayer = window.dataLayer || [];  -->
+<!-- function gtag(){dataLayer.push(arguments);}  -->
+<!-- gtag('js', new Date());  -->
 
-// gtag('config', 'G-L33J41P3HN'); 
-//  </script> 
+<!-- gtag('config', 'G-L33J41P3HN');  -->
+<!--  </script>  -->
 
 <title>Li & Cai Intellectual Property</title>
 
@@ -60,14 +60,14 @@
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
- // <script> 
- // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ 
-// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), 
-//  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) 
-//    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); 
-//    ga('create', 'G-L33J41P3HN', 'getbootstrap.com'); 
-//    ga('send', 'pageview'); 
-//  </script> 
+ <!-- <script> -->
+ <!-- (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ -->
+<!-- (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), -->
+<!--  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) -->
+<!--    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); -->
+<!--    ga('create', 'G-L33J41P3HN', 'getbootstrap.com'); -->
+<!--    ga('send', 'pageview'); -->
+<!--  </script> -->
 
   </head>
   <body>
